--- a/parnik/css/style.css
+++ b/parnik/css/style.css
@@ -888,11 +888,12 @@ footer p {
     right: 0;
     width: 100%;
     height: 100%;
-    z-index: 9;
+    z-index: 5;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 .popup-content {
+    display: none;
     position: fixed;
     background: url(../img/form/bg-form.jpg) center 55px no-repeat;
     background-size: cover;
@@ -904,6 +905,7 @@ footer p {
     padding: 20px 120px;
     border-radius: 10px;
     border: 1px solid #c4c4c4;
+    z-index: 9;
 }
 
 .popup-korovka {
