--- a/dzhuzhba/css/main.css
+++ b/dzhuzhba/css/main.css
@@ -1123,7 +1123,262 @@ body {
 
 /*END CATALOG*/
 /*START CONTACTS */
+._contactsmenu li:nth-child(6) {
+  background-color: rgba(148, 69, 2, 0.6); }
+
+._contactsmenu li:nth-child(2) {
+  background-color: transparent !important; }
+
+._contacts {
+  background-color: #e6d5c5; }
+  ._contacts .container {
+    padding-top: 60px; }
+  ._contacts_block_info span {
+    display: block;
+    font-size: 16px;
+    font-family: timesreg;
+    color: #000000;
+    margin-bottom: 18px;
+    line-height: 20px; }
+    ._contacts_block_info span:nth-child(1) {
+      font-family: timesbd;
+      position: relative; }
+      ._contacts_block_info span:nth-child(1):before {
+        content: '';
+        display: block;
+        width: 5px;
+        height: 88px;
+        top: 5px;
+        background-color: #fe8a00;
+        position: absolute;
+        left: -25px; }
+    ._contacts_block_info span a {
+      text-decoration: underline;
+      color: #ec7d0b; }
+  ._contacts_block_info b {
+    font-size: 16px;
+    line-height: 20px;
+    font-family: timesbd;
+    color: #000000;
+    position: relative; }
+  ._contacts_block_form form input {
+    width: 354px;
+    border: none;
+    border-bottom: 1px solid #c2c2c2;
+    display: block;
+    margin-bottom: 15px;
+    font-size: 16px;
+    outline: none;
+    color: #898989;
+    font-size: 16px;
+    font-family: timesreg; }
+    ._contacts_block_form form input:nth-child(2) {
+      margin-top: 16px; }
+    ._contacts_block_form form input:nth-child(3) {
+      margin-bottom: 40px; }
+  ._contacts_block_form form input::-webkit-input-placeholder {
+    color: #898989;
+    font-size: 16px;
+    font-family: timesreg; }
+  ._contacts_block_form form input:-moz-placeholder {
+    color: #898989;
+    font-size: 16px;
+    font-family: timesreg; }
+  ._contacts_block_form form input::-moz-placeholder {
+    color: #898989;
+    font-size: 16px;
+    font-family: timesreg; }
+  ._contacts_block_form form input:-ms-input-placeholder {
+    color: #898989;
+    font-size: 16px;
+    font-family: timesreg; }
+  ._contacts_block_form form button {
+    color: white;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: timesreg;
+    background-color: #ec7d0b;
+    border: 0;
+    padding: 10px 15px;
+    margin-top: 10px; }
+  ._contacts_map {
+    position: absolute;
+    width: 50%;
+    right: 0;
+    top: 0;
+    height: 100%; }
+
 /*END  CONTACTS */
+._catalogfooter {
+  margin-top: 0; }
+
+._header .container {
+  position: relative; }
+  ._header .container ._titlepage h2 {
+    font-family: timesital;
+    font-size: 48px;
+    color: #fcac4e;
+    position: absolute;
+    bottom: -100px;
+    left: 15px; }
+
+._breadcrumbs {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  position: relative;
+  background-color: #f6e8da; }
+  ._breadcrumbs img {
+    position: absolute;
+    bottom: 0;
+    right: 150px; }
+  ._breadcrumbs ul {
+    padding: 0;
+    margin: 0; }
+    ._breadcrumbs ul li {
+      list-style: none;
+      display: inline-block;
+      padding-right: 40px;
+      position: relative; }
+      ._breadcrumbs ul li:after {
+        content: url("../img/breadcrumbs.png");
+        display: block;
+        font-size: 15px;
+        color: #e88314;
+        font-family: timesreg;
+        position: absolute;
+        right: 15px;
+        top: 5px; }
+      ._breadcrumbs ul li:last-child:after {
+        display: none; }
+      ._breadcrumbs ul li:last-child a {
+        text-decoration: none; }
+      ._breadcrumbs ul li a {
+        font-size: 20px;
+        color: #000000;
+        font-family: timesreg;
+        text-decoration: underline; }
+
+/*START BREAD CATALOG*/
+._headcatalog_bread {
+  background-image: url("../img/breads/fon-catalog.jpg");
+  padding-bottom: 116px; }
+  ._headcatalog_bread .container {
+    top: auto; }
+  ._headcatalog_bread:after {
+    bottom: -225px;
+    -webkit-transform: skew(0deg, -12deg);
+        -ms-transform: skew(0deg, -12deg);
+            transform: skew(0deg, -12deg);
+    height: 100px;
+    background-color: #e6d5c5; }
+  ._headcatalog_bread_pita img {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto; }
+
+._catalogbread {
+  background-color: white;
+  padding-top: 65px;
+  position: relative;
+  padding-bottom: 80px; }
+  ._catalogbread_goods {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-left: 90px;
+    padding-right: 50px;
+    padding-bottom: 50px; }
+    ._catalogbread_goods:nth-child(1) {
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    ._catalogbread_goods:nth-child(3) {
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    ._catalogbread_goods img {
+      width: 100%; }
+    ._catalogbread_goods a {
+      display: block;
+      text-align: center;
+      font-family: timesreg;
+      font-size: 20px;
+      color: black;
+      text-decoration: underline; }
+    ._catalogbread_goods_bigleft {
+      -webkit-transform: translateX(-25%);
+          -ms-transform: translateX(-25%);
+              transform: translateX(-25%);
+      position: relative; }
+      ._catalogbread_goods_bigleft a {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 50px;
+        max-width: 300px;
+        margin: 0 auto;
+        background-color: rgba(255, 255, 255, 0.631);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        -webkit-border-radius: 15px;
+                border-radius: 15px; }
+    ._catalogbread_goods_bigright {
+      -webkit-transform: translateX(25%);
+          -ms-transform: translateX(25%);
+              transform: translateX(25%);
+      position: relative; }
+      ._catalogbread_goods_bigright a {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 15px;
+        max-width: 300px;
+        margin: 0 auto;
+        background-color: rgba(255, 255, 255, 0.631);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        -webkit-border-radius: 15px;
+                border-radius: 15px; }
+
+._headcatalog_bread ._catalogmenu li:nth-child(4) {
+  background-color: rgba(248, 134, 0, 0.45); }
+
+._seemore {
+  width: 270px;
+  height: 50px;
+  background-color: transparent;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  border: 1px solid #ffd73a;
+  font-family: timesreg;
+  font-size: 16px;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+  outline: none;
+  margin-top: 20px; }
+  ._seemore:hover {
+    background-color: #ffd73a;
+    color: black; }
+
+.item-list li {
+  display: none; }
+
+/*END BREAD CATALOG*/
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
