--- a/macter/css/style.css
+++ b/macter/css/style.css
@@ -72,8 +72,8 @@ textarea:focus {
 }
 .button {
   border-radius: 10px;
-  border-color: #b41120;
-  background-color:  #b41120;
+  border-color: #F00B1F;
+  background-color:  #F00B1F;
   width: 303px;
   height: 70px;
   font-family: Museo Sans Cyrl;
@@ -84,11 +84,22 @@ textarea:focus {
   -moz-box-shadow:inset 0px -8px 0px #960c1a;
   -webkit-box-shadow:inset 0px -8px 0px #960c1a;
   box-shadow:inset 0px -8px 0px #960c1a;
+  padding: 25px 35px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+}
+a.button.main-btn {
+  padding: 25px 35px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
 }
 
 .button:hover {
   cursor: pointer;
-  background-color: #d99a03;
+  background-color: #D3081B;
+  color: white
 }
 
 /*оформление форм */
@@ -157,7 +168,7 @@ section {
 }
 
 .main-title p {
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 1);
   font-size: 23px; 
   line-height: 54px; 
   text-align: left;
@@ -165,9 +176,17 @@ section {
 }
 
 .button {
-  margin-top: 68px;
-  position: relative;
-  z-index: 2;
+    margin-top: 68px;
+    position: relative;
+    z-index: 2;
+    padding: 25px 35px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+}
+.button:hover {
+  color: white;
+  text-decoration: none;
 }
 
 .circle {
@@ -369,9 +388,10 @@ li  {
   display: block;
   position: absolute;
   background: url(../img/prise/clock.png) no-repeat;
-  background-size: 80%;
+  background-size: 50%;
   left: 85%;
-  top: 1010%;
+  /*top: -10%;*/
+  /*top: 1010%;*/
 }
 
 .prise-block {
@@ -416,6 +436,7 @@ li  {
 .prise-btn {
   margin-top: 0;
   width: 198px;
+  margin: 0 auto;
 }
 
 .buy-btn {
@@ -475,22 +496,81 @@ form {
 
 
 @media (max-width: 767px) {
-
-  .section-header {
-    font-size: 26px;
-    margin-bottom: 30px;
+  .prise-list {
+  margin-top: 30px;
+  height: 160px;
+}
+  .buy {
+    padding: 11px 19px!important;
   }
+main.main {
+    background: url(../img/bg1mob.png) no-repeat;
+    background-size: contain;
+    background-color: #000;
+}
+.logo img {
+    width: 37px;
+}
+  .section-header {
+    font-size: 14px;
+    margin-bottom: 30px;
+    width: 238px;
+    margin: 0 auto;
+}
   /* main */ 
   .main-title h1 {
-    font-size: 28px;
+    font-size: 16px;
     border: none;
-  }
+    line-height: 21px;
+    text-align: center;
+}
+.main {
+  height: auto;
+}
 
   .main-title p {
-    font-size: 18px;
+    font-size: 11px;
     margin-top: 10px;
-  }
+    text-align: center;
+}
+.round {
+    /*background-image: url(../img/round.png);*/
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 150px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    top: -56px;
+}
+.prise .button {
+  padding-top: 11px;
+  font-size: 14px;
+}
+.button {
 
+    border-radius: 10px;
+    border-color: #b41120;
+    background-color: #b41120;
+    width: 140px;
+    height: 33px;
+    font-family: Museo Sans Cyrl;
+    font-weight: bold;
+    color: #fff;
+    font-size: 8px;
+    text-transform: uppercase;
+    -moz-box-shadow: inset 0px -8px 0px #960c1a;
+    -webkit-box-shadow: inset 0px -4px 0px #960c1a;
+    box-shadow: inset 0px -4px 0px #960c1a;
+    /*margin: 0 auto;
+    text-align: center;
+    display: inherit;
+    margin-bottom: 122px;*/
+    margin-top: 0;
+
+}
   .circle {
     display: none;
   }
@@ -498,13 +578,17 @@ form {
   .bg-main {
     display: none;
   }
-
+  .program .col-lg-12 {
+    padding: 0;
+  }
   /* programm */
-  .program-img {
-    display: none;
+  .program-img img {
+    /*display: none;*/
+    width: 100%;
   }
   .program-block {
-    display: block;
+    /*display: block;*/
+    display: none;
   }
 
   .program-text h2 {
@@ -522,10 +606,18 @@ form {
 
   .section-header_subtitle {
     margin-bottom: 30px;
-  }
+    font-size: 12px;
+    width: 174px;
+    margin: 22px auto;
+    line-height: 19px;
+}
 
   .material-img {
-    display: none;
+    display: block;
+  }
+   .material-img img {
+    width: 100%;
+    margin-bottom: 20px;
   }
 
   .material-block {
@@ -535,7 +627,23 @@ form {
   .material-list {
     margin: 0;
     line-height: 35px;
+    font-size: 14px;
+    line-height: 26px;
   }
+  .material-list  li {
+    list-style-type: none!important;
+    list-style-image: none;
+  }
+  .material-list  li:before {
+    background: url(../img/table/table-img.png);
+    content: '';
+    width: 21px;
+    display: block;
+    height: 21px;
+    position: relative;
+    left: -32px;
+    top: 24px;
+}
 
   /* who */
 
@@ -553,9 +661,11 @@ form {
   }
 
   .prise-list {
-    font-size: 24px;
+    font-size: 21px;
   }
-
+.prise h2.section-header {
+    margin-top: 15px;
+}
   .block-right {
     padding-top: 5px;
   }
@@ -619,3 +729,185 @@ section.review {
 
 
 
+#modal .modal-body,
+#modal1 .modal-body {
+    position: relative;
+    padding: 15px;
+    background: #353535;
+    color: white;
+    border: 4px solid white;
+font-family: 'Museo Sans Cyrl';
+
+}
+#modal form {
+  padding: 15px;
+}
+#modal .title {
+  text-align: center;
+
+color: #ffffff;
+font-family: 'Museo Sans Cyrl';
+font-weight: 900;
+font-size: 23px;
+font-weight: 900;
+line-height: 55px;
+}
+#modal .row1 input {
+  width: 100%;
+  height: 47px;
+  padding: 5px;
+font-family: 'Museo Sans Cyrl';
+margin: 3px 0px;
+border: none;
+}
+#modal .row2 input {
+  width: 100%;
+  padding: 5px;
+  height: 47px;
+  margin: 3px 0px;
+  border: none;
+}
+/*#modal .row3 {
+  display: flex;
+  justify-content: space-between;
+}*/
+#modal .row3 input {
+  width: 100%;
+  height: 47px;
+  border: none;
+  padding: 5px;
+}
+#modal .row3 button {
+  width: 100%;
+  height: 47px;
+  border: none;
+  padding: 5px;
+  background: #CE1324;
+  font-weight: 300;
+}
+#modal .row4 {
+  display: flex;
+  justify-content: space-between;
+}
+.sum {
+color: #ffffff;
+font-size: 23px;
+font-weight: 400;
+line-height: 54px;
+}
+.num {
+color: #ffffff;
+font-weight: 900;
+font-size: 26px;
+line-height: 54px;
+}
+#modal label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 9px;
+    position: relative;
+    top: -3px;
+}
+#modal input {
+  color: black;
+}
+#modal button[type="submit"] {
+  background: #CE1324;
+  height: 47px;
+  border-radius: 7px;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 100;
+  -webkit-box-shadow:inset 0px -4px 0px #960c1a;
+  margin-top: 15px;
+}
+
+
+
+
+#modal1 form {
+  padding: 15px;
+}
+#modal1 .title {
+  text-align: center;
+
+color: #ffffff;
+font-family: 'Museo Sans Cyrl';
+font-weight: 900;
+font-size: 23px;
+font-weight: 900;
+line-height: 55px;
+}
+#modal1 .row1 input {
+  width: 100%;
+  height: 47px;
+  padding: 5px;
+font-family: 'Museo Sans Cyrl';
+margin: 3px 0px;
+border: none;
+}
+#modal1 .row2 input {
+  width: 100%;
+  padding: 5px;
+  height: 47px;
+  margin: 3px 0px;
+  border: none;
+}
+/*#modal .row3 {
+  display: flex;
+  justify-content: space-between;
+}*/
+#modal1 .row3 input {
+  width: 100%;
+  height: 47px;
+  border: none;
+  padding: 5px;
+}
+#modal1 .row3 button {
+  width: 100%;
+  height: 47px;
+  border: none;
+  padding: 5px;
+  background: #CE1324;
+  font-weight: 300;
+}
+#modal1 .row4 {
+  display: flex;
+  justify-content: space-between;
+}
+.sum {
+color: #ffffff;
+font-size: 23px;
+font-weight: 400;
+line-height: 54px;
+}
+.num {
+color: #ffffff;
+font-weight: 900;
+font-size: 26px;
+line-height: 54px;
+}
+#modal1 label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 9px;
+    position: relative;
+    top: -3px;
+}
+#modal1 input {
+  color: black;
+}
+#modal1 button[type="submit"] {
+  background: #CE1324;
+  height: 47px;
+  border-radius: 7px;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 100;
+  -webkit-box-shadow:inset 0px -4px 0px #960c1a;
+  margin-top: 15px;
+}
