--- a/dzhuzhba/css/main.css
+++ b/dzhuzhba/css/main.css
@@ -1608,6 +1608,54 @@ body {
 ._contactsmenu li:nth-child(6) {
   background-color: rgba(249, 128, 0, 0.37); }
 
+._catalog_menu_list ul li {
+  line-height: 1.5; }
+
+._catalog_menu_list ul a:first-child li {
+  padding-top: 12px;
+  padding-bottom: 12px; }
+
+._catalogbread_goods a, ._catalogcake_goods a, ._catalogbun_goods a {
+  color: #6f0f09; }
+
+._ourbakery_news {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end; }
+  ._ourbakery_news a {
+    font-size: 20px;
+    color: #800c04;
+    display: block;
+    font-family: timesreg;
+    text-decoration: underline; }
+    ._ourbakery_news a:nth-child(3) {
+      color: black;
+      font-size: 14px; }
+  ._ourbakery_news img {
+    display: block;
+    margin: 0 auto; }
+
+._ourbakery_title h3 {
+  color: #770000; }
+
+._ourbakery_descr {
+  margin-bottom: 60px; }
+
+._ourbakery_boottom {
+  padding-top: 200px; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -1833,7 +1881,13 @@ body {
   ._catalog_menu_list ul li {
     padding-top: 20px; }
   ._ourbakery_block p {
-    font-size: 24px; } }
+    font-size: 24px; }
+  ._ourbakery_descr {
+    margin-bottom: 0; }
+  ._ourbakery_news {
+    padding-bottom: 40px; }
+  ._ourbakery_news img {
+    width: 100%; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 767px) {
@@ -2398,7 +2452,47 @@ body {
   ._goods_info h3 {
     text-align: center; }
   ._header_main_special {
-    width: 290px; } }
+    width: 290px; }
+  ._news_allbest {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._news_allbest_padd:nth-child(3) {
+    -webkit-box-ordinal-group: -2;
+    -webkit-order: -3;
+        -ms-flex-order: -3;
+            order: -3; }
+  ._news_allbest_padd:nth-child(2) {
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+        -ms-flex-order: -1;
+            order: -1; }
+  ._news_allbest_padd:nth-child(1) {
+    -webkit-box-ordinal-group: -3;
+    -webkit-order: -4;
+        -ms-flex-order: -4;
+            order: -4; }
+  ._ourbakery_news {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  ._ourbakery_hide_desc {
+    display: block; }
+  ._ourbakery_news_item {
+    margin-bottom: 20px; }
+  ._ourbakery_hide_desc2 {
+    display: none; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
